# qCMAT

./: README.md  ccc  qCMAT.cpp
plugins/: CMakeLists.txt  CMakePluginTpl.cmake
plugins/core/qCompass/: ccCompass.cpp
plugins/example/: CMakeLists.txt
plugins/qCMAT/: CC_PLUGIN_CUSTOM_HEADER_LIST  CC_PLUGIN_CUSTOM_SOURCE_LIST  CMakeLists.txt  README.md  qCMAT.cpp  qCMAT.h  qCMAT.qrc  qCMATDlg.h
plugins/qCMAT/src/: CMakeLists.txt  ccDisplayShoreline.cpp  ccDisplayShoreline.h  ccDisplaySurface.cpp  ccDisplaySurface.h  ccDisplayVolume.cpp  ccDisplayVolume.h  ccDummyFeat.cpp  ccDummyFeat.h  ccExtractProfile.cpp  ccExtractProfile.h  ccQCMATSplashScreen.cpp  ccQCMATSplashScreen.h  ccQCMATTools.cpp  ccQCMATTools.h  ccSplashScreen.cpp  ccSplashScreen.h  ccVolumeTool.cpp  ccVolumeTool.h  ccvolumetool.h  displayShoreline.cpp  displayShoreline.h  displaySurface.cpp  displaySurface.h  displayVolume.cpp  displayVolume.h  dummyFeat.cpp  dummyFeat.h  glDlg.cpp  glDlg.h  qCMATDlg.cpp  qCMATDlg.h
plugins/qCMAT/ui/: CMakeLists.txt  ccQCMATSplashScreen.ui  ccVolumeTool.ui  ccVolumeTool.ui.autosave  displayShoreline.ui  displaySurface.ui  displayVolume.ui  dlg.ui  dummyFeat.ui  extractProfile.ui  glDlg.ui  splashScreen.ui
plugins/qTestPlug/: CMakeLists.txt  info.json  qTestPlug.cpp  qTestPlug.h
